--- a/style.css
+++ b/style.css
@@ -1,12 +1,15 @@
-nav{
-    background-color: aqua;
-    display: flex;
-    justify-content: center;
-    font-size: 20px;
-}
-body{
-    margin: 0;
-}
-p{
-    margin: auto;
+#console {
+  background-color: #111;
+  color: #0f0;
+  font-family: monospace;
+  font-size: 14px;
+  width: 100%;
+  height: 300px;
+  border: none;
+  padding: 10px;
+  resize: none;
+  outline: none;
+  overflow-y: auto;
+  white-space: pre-wrap;
+  box-sizing: border-box;
 }
