--- a/style.css
+++ b/style.css
@@ -1,3 +1,42 @@
+nav {
+  background-color: #0d6efd;
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+  font-weight: bold;
+}
+
+.console-container {
+  width: 100%;
+  max-width: 100%;
+  margin: auto;
+  background: #111;
+  border-radius: 6px;
+  resize: none;
+}
+
+.console-header {
+  background: #222;
+  padding: 8px 10px;
+  display: flex;
+  gap: 6px;
+  align-items: center;
+    resize: none;
+}
+
+.console-header .dot {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  display: inline-block;
+  resize: none;
+}
+
+.red { background: #ff5f56; }
+.yellow { background: #ffbd2e; }
+.green { background: #27c93f; }
+
 #console {
   background-color: #111;
   color: #0f0;
@@ -12,4 +51,18 @@
   overflow-y: auto;
   white-space: pre-wrap;
   box-sizing: border-box;
+}
+
+.Welcome-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  gap: 15px;
+  margin-bottom: 10px;
+  resize: none;
+}
+
+.bank-logo{
+  width: 80px;
+  height: inherit;
 }
