--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 nav {
-  background-color: rgb(13, 110, 253);
+  background-color: #5682B1;
   color: white;
   display: flex;
   justify-content: space-between;
-  padding: 10px 20px;
+  align-items: center;
   font-weight: bold;
+  padding: 10px 20px;
 }
 
+.center{
+  font-size: 50px;
+  font-weight: bold;
+}
 .console-container {
   width: 100%;
   max-width: 100%;
@@ -57,10 +62,16 @@ nav {
 
 .Welcome-wrapper {
   display: flex;
-  align-items: center;
-  justify-content: left;
-  gap: 15px;
+  flex-direction: column;
+  background: #739EC9;
+  padding: 20px;
+  padding-top: 5px;
+  border-radius: 10px;
+  flex: 1;
+  box-sizing: border-box;
+  margin-top: 10px;
   margin-bottom: 10px;
+  gap: 2.5px;
 }
 
 .welcome-logo{
@@ -81,11 +92,14 @@ nav {
 .footers-section {
   display: flex;
   flex-direction: column;
-  background: #f0f0f0;
+  background: #739EC9;
   padding: 20px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   border-radius: 10px;
   flex: 1;
   box-sizing: border-box;
+  gap: 2.5px;
 }
 
 .tabs{
@@ -96,6 +110,7 @@ nav {
   margin-bottom: 5px;
   margin-right: auto;
   line-height: 1.2;
+  padding-top: 0px;
 }
 
 .tabs-logo{
@@ -103,6 +118,9 @@ nav {
   height: auto;
 }
 
+.lore{
+  line-height: 0.5;
+}
 .field{
   display: flex;
   align-items: center;
@@ -119,8 +137,8 @@ nav {
   padding: 4px;
   font-size: 12px;
   border-width: 1px;
-  border-color: #CCCCCC;
-  background-color: #FFFFFF;
+  border-color: #ffe8dbc6;
+  background-color: #FFE8DB;
   color: #000000;
   border-style: solid;
   border-radius: 10px;
@@ -132,8 +150,8 @@ nav {
   padding: 4px;
   font-size: 12px;
   border-width: 1px;
-  border-color: #cccccc50;
-  background-color: #e9e9e9;
+  border-color: #ffe8dbc6;
+  background-color: #FFE8DB;
   color: #000000;
   border-style: solid;
   border-radius: 10px;
@@ -174,4 +192,9 @@ button:hover .button_top {
 
 button:active .button_top {
   transform: translateY(1px);
+}
+
+h1{
+  margin-bottom: 5px;
+  margin-top: 10px;
 }
