--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ nav {
   text-shadow: 0px 0px 5px rgba(66,66,66,.01);
 }
 
-.field input[read-only]{
+.field input[disabled]{
   padding: 4px;
   font-size: 12px;
   border-width: 1px;
@@ -157,6 +157,7 @@ nav {
   border-radius: 10px;
   box-shadow: 0px 0px 5px rgba(66,66,66,.75);
   cursor: not-allowed;
+
 }
 
 input[type=number] {
